--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "express-session": "^1.15.5",
     "express-validator": "^4.1.1",
     "helmet": "^3.8.1",
+    "moment": "^2.18.1",
     "mongodb": "^2.2.31",
     "nodemailer": "^4.1.0",
+    "safe-regex": "^1.1.0",
     "vue": "^2.4.2"
   }
 }
