--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-limiter": "^1.6.1",
     "express-session": "^1.15.5",
     "express-validator": "^4.1.1",
+    "formidable": "^1.1.1",
     "helmet": "^3.8.1",
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
