--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-validator": "^4.1.1",
     "formidable": "^1.1.1",
     "helmet": "^3.8.1",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
     "nodemailer": "^4.1.0",
