--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A web application for a real estate business",
   "main": "unity_homes_server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=development && nodemon",
+    "windev": "set NODE_ENV=development && nodemon",
+    "live": "NODE_ENV=production && pm2 unity_homes_server.js"
   },
   "repository": {
     "type": "git",
