--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "unity_homes_server.js",
   "scripts": {
     "dev": "nodemon dev_server.js",
-    "live": "pm2 restart unity_homes_server.js"
+    "live": "pm2 restart ecosystem.config.js --env production unity_homes_server.js"
   },
   "repository": {
     "type": "git",
