--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongodb": "^2.2.31",
     "nodemailer": "^4.1.0",
     "safe-regex": "^1.1.0",
+    "stripe": "^5.4.0",
     "vue": "^2.4.2"
   }
 }
