--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A web application for a real estate business",
   "main": "unity_homes_server.js",
   "scripts": {
-    "dev": "nodemon dev_server.js",
+    "watch": "pm2 start --watch . --name=unity-dev dev_server.js",
+    "log": "pm2 logs unity-dev",
+    "dev": "npm run watch && npm run log",
     "startLive": "pm2 start ecosystem.json --env production",
-    "restartLive": "pm2 restart ecosystem.json --env production",
-    "preinstall": "rm package-lock.json"
+    "restartLive": "pm2 restart ecosystem.json --env production"
   },
   "repository": {
     "type": "git",
