--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/Awpatterson217/unity-homes.com#readme",
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.14",
     "angular": "^1.6.6",
+    "angular-smart-table": "^2.1.11",
+    "angular-ui-bootstrap": "^2.5.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "connect-redis": "^3.3.0",
@@ -33,12 +36,13 @@
     "express-validator": "^4.1.1",
     "formidable": "^1.1.1",
     "helmet": "^3.8.1",
-    "lodash": "^4.17.4",
+    "lodash-es": "^4.17.4",
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
     "nodemailer": "^4.1.0",
     "safe-regex": "^1.1.0",
     "stripe": "^5.4.0",
+    "ui-select": "^0.19.8",
     "vue": "^2.4.2"
   }
 }
