--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "express-validator": "^4.1.1",
     "formidable": "^1.1.1",
     "helmet": "^3.8.1",
-    "lodash-es": "^4.17.4",
+    "lodash": "^4.17.5",
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
     "nodemailer": "^4.1.0",
