Changed webpack config, added gulp, changed dev scripts, restructured views directory, updated dev-server, and refactored main server

--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "A web application for a real estate business",
   "main": "unity_homes_server.js",
   "scripts": {
-    "build": "webpack",
-    "build:prod": "webpack -p",
+    "build": "webpack && gulp build",
+    "build:prod": "webpack -p && gulp build",
     "watch:webpack": "webpack --watch",
     "watch:pm2": "pm2 start --watch . --name=unity dev_server.js",
     "server:dev": "nodemon dev_server.js",
-    "server:webpack": "./node_modules/.bin/webpack-dev-server",
-    "dev": "npm run server:dev && npm run server:dev",
+    "server:webpack": "webpack-dev-server",
+    "dev": "npm run build && gulp dev",
+    "dev:dashboard": "npm run build && gulp dev-dashboard",
     "delete:pm2": "pm2 delete -s unity || :",
     "log:pm2": "pm2 logs unity",
-    "start": "pm2 start ecosystem.json --env production",
-    "restart": "pm2 restart ecosystem.json --env production"
+    "start": "npm run build:prod && pm2 start ecosystem.json --env production",
+    "restart": "pm2 restart ecosystem.json --env production",
+    "gulpTest": "gulp copyEjs"
   },
   "repository": {
     "type": "git",
@@ -58,16 +60,34 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "browser-sync": "^2.23.6",
+    "bunyan": "^1.8.12",
     "clean-webpack-plugin": "^0.1.18",
     "copy-webpack-plugin": "^4.4.1",
+    "cross-spawn": "^6.0.4",
     "css-loader": "^0.28.9",
+    "del": "^3.0.0",
     "ejs-compiled-loader": "^1.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "fancy-log": "^1.3.2",
     "file-loader": "^1.1.6",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-concat-css": "^3.0.0",
+    "gulp-concat-vendor": "0.0.4",
+    "gulp-less": "^3.4.0",
+    "gulp-minify": "^2.1.0",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
+    "run-sequence": "^2.2.1",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
-    "webpack": "^3.10.0",
+    "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   }
 }
