--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "del": "^3.0.0",
     "ejs-compiled-loader": "^1.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "fancy-log": "^1.3.2",
     "file-loader": "^1.1.6",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
@@ -84,10 +83,13 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
+    "rollup-stream": "^1.24.1",
     "run-sequence": "^2.2.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
+    "vinyl-named": "^1.1.0",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "webpack-stream": "^4.0.1"
   }
 }
