--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "copy-webpack-plugin": "^4.4.1",
     "cross-spawn": "^6.0.4",
     "css-loader": "^0.28.9",
-    "del": "^3.0.0",
     "ejs-compiled-loader": "^1.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
@@ -83,13 +82,10 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
-    "rollup-stream": "^1.24.1",
     "run-sequence": "^2.2.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
-    "vinyl-named": "^1.1.0",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-stream": "^4.0.1"
+    "webpack-dev-server": "^2.11.1"
   }
 }
