--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
     "nodemailer": "^4.1.0",
+    "nodemon": "^1.17.3",
     "popper.js": "^1.12.9",
     "safe-regex": "^1.1.0",
     "stripe": "^5.4.0",
