--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "helmet": "^3.8.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
+    "mkdirs": "0.0.2",
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
     "nodemailer": "^4.1.0",
