--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.14",
     "angular": "^1.6.9",
+    "angular-load": "^0.5.0",
     "angular-smart-table": "^2.1.11",
     "angular-ui-bootstrap": "^2.5.6",
     "bcryptjs": "^2.4.3",
