Updating env vars

--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "build": "webpack && gulp build",
     "build:prod": "webpack -p && gulp build",
     "watch:webpack": "webpack --watch",
-    "watch:pm2": "pm2 start --watch . --name=unity dev_server.js",
     "server:dev": "nodemon dev_server.js",
     "server:webpack": "webpack-dev-server",
-    "dev": "npm run build && gulp dev",
+    "dev": "npm run build && UNITY_MONGO_DB=mongodb://127.0.0.1:27017/test gulp dev",
     "dev:dashboard": "npm run build && gulp dev-dashboard",
     "delete:pm2": "pm2 delete -s unity || :",
     "log:pm2": "pm2 logs unity",
