--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "A web application for a real estate business",
   "main": "unity_homes_server.js",
   "scripts": {
+    "insert": "UNITY_MONGO_DB=mongodb://127.0.0.1:27017/test node ./dev/insert.js",
     "build": "webpack && gulp build",
     "build:prod": "webpack -p && gulp build",
     "watch:webpack": "webpack --watch",
     "server:dev": "nodemon dev_server.js",
     "server:webpack": "webpack-dev-server",
-    "dev": "npm run build && UNITY_MONGO_DB=mongodb://127.0.0.1:27017/test gulp dev",
+    "dev": "npm run build && UNITY_STRIPE_TEST_PUBLISHABLE_KEY=pk_test_hdv1oJmfn5IRru1y5g3A6q1R UNITY_MONGO_DB=mongodb://127.0.0.1:27017/test gulp dev",
     "dev:dashboard": "npm run build && gulp dev-dashboard",
     "delete:pm2": "pm2 delete -s unity || :",
     "log:pm2": "pm2 logs unity",
@@ -30,6 +31,7 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.14",
     "angular": "^1.6.9",
+    "angular-cookies": "^1.7.2",
     "angular-load": "^0.5.0",
     "angular-smart-table": "^2.1.11",
     "angular-ui-bootstrap": "^2.5.6",
