--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "mongodb:stop": "docker stop unity-mongo || exit 0",
     "mongodb:rm": "docker rm unity-mongo || exit 0",
     "mongodb:erase": "rm -rf ~/src/www/unity-homes.com/data || exit 0",
-    "mongodb:insert": "UNITY_MONGO_DB=mongodb://127.0.0.1:27017/test node ./dev/insert.js",
+    "mongodb:insert": "UNITY_MONGO_DB=test UNITY_MONGO_URL=mongodb://127.0.0.1:27017 node ./dev/insert.js",
     "mongodb": "npm run mongodb:stop; npm run mongodb:rm; npm run mongodb:erase; npm run mongodb:start;",
     "build": "webpack && gulp build",
     "build:prod": "webpack -p && gulp build",
     "watch:webpack": "webpack --watch",
-    "dev": "npm run build && UNITY_STRIPE_TEST_PUBLISHABLE_KEY=pk_test_hdv1oJmfn5IRru1y5g3A6q1R UNITY_MONGO_DB=mongodb://127.0.0.1:27017/test gulp dev",
+    "dev": "npm run build && UNITY_STRIPE_TEST_PUBLISHABLE_KEY=pk_test_hdv1oJmfn5IRru1y5g3A6q1R UNITY_MONGO_DB=test UNITY_MONGO_URL=mongodb://127.0.0.1:27017 gulp dev",
     "delete:pm2": "pm2 delete -s unity || :",
     "log:pm2": "pm2 logs unity",
     "start": "npm run build:prod && pm2 start ecosystem.json --env production",
@@ -52,7 +52,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "moment": "^2.18.1",
-    "mongodb": "^2.2.31",
+    "mongodb": "3.1.1",
     "nodemailer": "^4.1.0",
     "nodemon": "^1.17.3",
     "popper.js": "^1.12.9",
